kubernetes/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      serviceAccountName: app-service-account
      containers:
      - name: notification-service
        image: notification-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
