kubernetes/todo-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
spec:
  serviceAccountName: app-service-account
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
