kubernetes/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
  - port: 8081
    targetPort: 8081
  type: LoadBalancer
