kubernetes/todo-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: ClusterIP
  selector:
    app: todo-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: 10.100.38.49
